fixed button alignment

--- a/src/components/styles/compiler.css
+++ b/src/components/styles/compiler.css
@@ -88,6 +88,7 @@ body {
     align-items: center;
     white-space: nowrap;
     flex-shrink: 0;
+    margin: 19px 0px 19px 19px; 
 }
 /* DEFAULT select rejext btn style */
 
@@ -166,7 +167,8 @@ body {
     border-radius: 12px; 
     cursor: pointer;
     box-sizing: border-box;
-    margin: 19px;
+    /* padding: top, right bottom, left */
+    margin: 19px 0px 19px 19px; 
     margin-left: auto; /* Pushes button to the right */
     flex-shrink: 0; /* Prevent button from shrinking */
 }
